# lesson-06

./: .gitignore  CMakeLists.txt  README.txt
inc/: data.h  render_stuff.h  spline.h
shd/: lightingPerVertex.frag  lightingPerVertex.vert
src/: asteroids.cpp  render_stuff.cpp  spline.cpp
